test/error/self_with_type.result
Error: "self" does not need type
  --> test/error/self_with_type.colgm:4:25
  | 
4 |     pub func test(self: i64) {}
  |                         ^^^

Error: "self" does not need type
  --> test/error/self_with_type.colgm:12:25
   | 
12 |     pub func test(self: i64) {}
   |                         ^^^